@@ -1,20 +1,20 @@
     1    0.00  35.000  .300   150.0    200.0   0.00     0.0  -9999.0000
     1    0.00  35.000  .300   150.0    200.0  10.00     0.0  -9999.0000
-    1    0.00  35.000  .300   150.0    200.0  20.00     0.0      2.1520
-    1    0.00  35.000  .300   150.0    200.0  30.00     0.0      0.0670
-    1    0.00  35.000  .300   150.0    200.0  40.00     0.0      0.0435
-    1    0.00  35.000  .300   150.0    200.0  50.00     0.0      0.0328
-    1    0.00  35.000  .300   150.0    200.0  60.00     0.0      0.0240
-    1    0.00  35.000  .300   150.0    200.0  70.00     0.0      0.0157
-    1    0.00  35.000  .300   150.0    200.0  80.00     0.0      0.0083
-    1    0.00  35.000  .300   150.0    200.0  90.00     0.0      0.0121
+    1    0.00  35.000  .300   150.0    200.0  20.00     0.0  -9999.0000
+    1    0.00  35.000  .300   150.0    200.0  30.00     0.0  -9999.0000
+    1    0.00  35.000  .300   150.0    200.0  40.00     0.0  -9999.0000
+    1    0.00  35.000  .300   150.0    200.0  50.00     0.0  -9999.0000
+    1    0.00  35.000  .300   150.0    200.0  60.00     0.0  -9999.0000
+    1    0.00  35.000  .300   150.0    200.0  70.00     0.0  -9999.0000
+    1    0.00  35.000  .300   150.0    200.0  80.00     0.0  -9999.0000
+    1    0.00  35.000  .300   150.0    200.0  90.00     0.0  -9999.0000
     2    0.00  35.000  .300   150.0    200.0   0.00   180.0  -9999.0000
     2    0.00  35.000  .300   150.0    200.0  10.00   180.0  -9999.0000
-    2    0.00  35.000  .300   150.0    200.0  20.00   180.0  -9999.0000
-    2    0.00  35.000  .300   150.0    200.0  30.00   180.0  -9999.0000
-    2    0.00  35.000  .300   150.0    200.0  40.00   180.0  -9999.0000
-    2    0.00  35.000  .300   150.0    200.0  50.00   180.0  -9999.0000
-    2    0.00  35.000  .300   150.0    200.0  60.00   180.0  -9999.0000
-    2    0.00  35.000  .300   150.0    200.0  70.00   180.0  -9999.0000
-    2    0.00  35.000  .300   150.0    200.0  80.00   180.0  -9999.0000
-    2    0.00  35.000  .300   150.0    200.0  90.00   180.0  -9999.0000
+    2    0.00  35.000  .300   150.0    200.0  20.00   180.0      0.2310
+    2    0.00  35.000  .300   150.0    200.0  30.00   180.0      0.0663
+    2    0.00  35.000  .300   150.0    200.0  40.00   180.0      0.0386
+    2    0.00  35.000  .300   150.0    200.0  50.00   180.0      0.0287
+    2    0.00  35.000  .300   150.0    200.0  60.00   180.0      0.0200
+    2    0.00  35.000  .300   150.0    200.0  70.00   180.0      0.0125
+    2    0.00  35.000  .300   150.0    200.0  80.00   180.0      0.0059
+    2    0.00  35.000  .300   150.0    200.0  90.00   180.0      0.0088
