@@ -42,11 +42,11 @@ mars_mapi: mars_mapi.o marsorbit.o jsub.o flux_mars.o soilthprop.o makefile
 	flux_mars.o $(SR)conductionQ.o $(SR)tridag.o $(SR)conductionT.o \
 	$(SR)grids.o soilthprop.o $(SR)psv.o jsub.o $(SR)psvco2.o 
 
-mars_mapi2p: mars_mapi2p.o jsubv.o marsorbit.o flux.o soilthprop.o \
+mars_mapi2p: mars_mapi2p.o jsubv.o marsorbit.o flux_mars.o soilthprop.o \
 	makefile
 	make -C $(SR) common
 	$(CC) $(LFLAGS) mars_mapi2p.o jsubv.o $(SR)julday.o marsorbit.o \
-	flux.o $(SR)conductionQ.o $(SR)tridag.o $(SR)conductionT.o \
+	flux_mars.o $(SR)conductionQ.o $(SR)tridag.o $(SR)conductionT.o \
 	$(SR)grids.o $(SR)psv.o soilthprop.o
 
 stabgrow_fast: fast_modules.o fast_subs_exper.o stabgrow_fast.o \
